# Soul-King-Discord-bot

./: README.md  data.json  example.draw  ignore  main.py  pyproject.toml
cogs/: admin.py  chat.py  error_handle.py  funcs.py  game.py  helpmod.py  image.py  mal.py  music.py  music2.py
embedss/: help_em.py
games/: battle.py  cookie.py  userpoints.py  wordguess.py
games/res/: attacks.py
