[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "toughmistyloaderprogram"
version = "0.1.0"
[tool.poetry.dependencies]
PyNaCl = "^1.3"
discord = "^1.0"
python = "^3.8"
flask = "^1.1.2"
youtube-dl = "^2021.1.8"
[tool.poetry.dev-dependencies]
